[gd_scene load_steps=10 format=2]

[ext_resource path="res://scripts/main_menu.gd" type="Script" id=1]
[ext_resource path="res://assets/Menu/Houvered.png" type="Texture" id=2]
[ext_resource path="res://assets/Menu/pressed.png" type="Texture" id=3]
[ext_resource path="res://assets/Menu/Background MENU.png" type="Texture" id=4]
[ext_resource path="res://assets/Menu/Normal.png" type="Texture" id=5]
[ext_resource path="res://assets/fonts/leatherface3dital.ttf" type="DynamicFontData" id=6]
[ext_resource path="res://audio/sound_tracks/musica_game_jam_pedreiro_menu.ogg" type="AudioStream" id=7]

[sub_resource type="DynamicFont" id=1]
size = 63
use_filter = true
extra_spacing_char = 3
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=2]
size = 106
outline_size = 2
outline_color = Color( 0.8, 0.796078, 0.796078, 1 )
font_data = ExtResource( 6 )

[node name="main_menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="bt_jogar" type="TextureButton" parent="."]
margin_left = 983.499
margin_top = 121.724
margin_right = 1238.5
margin_bottom = 232.724
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 3 )
texture_hover = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="bt_jogar"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -74.5
margin_top = -30.0
margin_right = 74.5
margin_bottom = 30.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 1, 1, 1, 1 )
custom_constants/shadow_offset_x = 0
custom_constants/shadow_offset_y = 0
custom_constants/shadow_as_outline = -1
text = "jogar
"
align = 1
valign = 1
autowrap = true
clip_text = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="bt_creditos" type="TextureButton" parent="."]
margin_left = 988.3
margin_top = 248.144
margin_right = 1243.3
margin_bottom = 359.144
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 3 )
texture_hover = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="bt_creditos"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -85.0
margin_top = -30.0
margin_right = 85.0
margin_bottom = 30.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 1, 1, 1, 1 )
custom_constants/shadow_offset_x = 0
custom_constants/shadow_offset_y = 0
custom_constants/shadow_as_outline = -1
text = "Credts
"
align = 1
valign = 1
autowrap = true
clip_text = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="bt_sair" type="TextureButton" parent="."]
margin_left = 991.805
margin_top = 374.356
margin_right = 1246.8
margin_bottom = 485.356
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 3 )
texture_hover = ExtResource( 2 )

[node name="Label3" type="Label" parent="bt_sair"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -74.5
margin_top = -30.0
margin_right = 74.5
margin_bottom = 30.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 1, 1, 1, 1 )
custom_constants/shadow_offset_x = 0
custom_constants/shadow_offset_y = 0
custom_constants/shadow_as_outline = -1
text = "Quit
"
align = 1
valign = 1
autowrap = true
clip_text = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="panel_credit" type="ColorRect" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -281.0
margin_top = -219.0
margin_right = 281.0
margin_bottom = 219.0
color = Color( 0, 0, 0, 0.898039 )

[node name="Label" type="Label" parent="panel_credit"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -183.0
margin_top = -164.0
margin_right = 183.0
margin_bottom = 164.0

[node name="bt_voltar" type="Button" parent="panel_credit"]
margin_left = 37.0068
margin_top = 401.251
margin_right = 105.007
margin_bottom = 421.251
text = "back"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background MENU" type="Sprite" parent="."]
position = Vector2( 645.32, 361.638 )
scale = Vector2( 0.667428, 0.675015 )
z_index = -2
texture = ExtResource( 4 )

[node name="Label" type="Label" parent="."]
margin_left = 373.079
margin_top = 29.9661
margin_right = 1052.08
margin_bottom = 268.966
custom_fonts/font = SubResource( 2 )
text = "Vida de Pedreiro
"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Houvered" type="Polygon2D" parent="Label"]
modulate = Color( 0.772549, 0.631373, 0.6, 1 )
position = Vector2( 284.67, 47.1083 )
scale = Vector2( 2.4938, 1.0971 )
z_index = -1
texture = ExtResource( 5 )
polygon = PoolVector2Array( 112.516, -33.3311, 120.095, -32.7569, 128.684, -24.718, 129.775, -16.3501, 129.947, 33.2765, 125.905, 37.8701, 122.116, 39.0185, 115.295, 44.1863, 109.191, 47.6203, 85.9402, 47.6203, -109.5, 55.5, -109.5, 54.5, -125.5, 41.5, -125.5, 39.1, -127.5, 36.1, -127.5, -35.6, -124.9, -42.5, -123.4, -42.5, -113.4, -53.5, -111, -53.5, -107.1, -55.5, 88.0132, -37.9247 )
uv = PoolVector2Array( 237, 1, 247.458, 9.03955, 250.847, 12.9944, 255, 19.4, 255, 91.1, 252.4, 98, 250.9, 98, 243.22, 106.215, 239.83, 108.475, 235.6, 111, 18, 111, 11.8644, 107.062, 2.82487, 97.4576, 0.282494, 94.0678, 0, 91.6, -0.564972, 20.6215, 2.54238, 14.1243, 5.9322, 10.452, 11.8644, 4.51978, 16.5, 2, 20.904, -0.282486, 237, 0 )
polygons = [ PoolIntArray( 0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21 ) ]

[node name="effect_bt_pressed" type="AudioStreamPlayer" parent="."]

[node name="menu_soundtrack" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )

[connection signal="pressed" from="bt_jogar" to="." method="_on_bt_jogar_pressed"]
[connection signal="pressed" from="bt_creditos" to="." method="_on_bt_creditos_pressed"]
[connection signal="pressed" from="bt_sair" to="." method="_on_bt_sair_pressed"]
[connection signal="pressed" from="panel_credit/bt_voltar" to="." method="_on_bt_voltar_pressed"]
